# pin

./: .gitignore  PENDING_ISSUES.md  README.md  changelog.txt  deploy.sh  pubspec.yaml  release.sh
.agents/context/: DESIGN.md  PRODUCT.md
.github/workflows/: ci.yml  deploy.yml
.impeccable/critique/: 2026-06-26T08-34-37Z__site-index-html.md  2026-06-26T09-23-57Z__site-index-html.md  2026-06-26T11-03-22Z__site-index-html.md  2026-06-26T11-28-46Z__site-index-html.md  2026-06-28T03-27-53Z__site-index-html.md  2026-06-29T23-37-13Z__site-privacy-html.md  2026-06-29T23-59-14Z__site-index-html.md  ignore.md
admin/: pyproject.toml
admin/deploy/: run.sh  setup.sh
admin/pin_admin/: admin.py  app.py  emails.py
admin/pin_admin/templates/: _backlog.html  _dev_detail.html  _dev_list.html  _mcp.html  _mcp_tools.html  _push.html  _review.html  _simple.html  _skills.html  _store.html  _subagents.html  _tool_config.html  _tool_edit.html  _tool_row.html  _tools.html  _waitlist.html  _waitlist_preview.html  _waitlist_thread.html  base.html  dashboard.html  dev.html  login.html
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts  google-services.json
android/fastlane/: Fastfile  README.md  report.xml
assets/models/: README.md
backend-rust/: Cargo.toml  Dockerfile
backend-rust/src/: admin.rs  converter.rs  display.rs  emails.rs  main.rs  mcp.rs  proxy.rs  store.rs
backend-rust/templates/: _assistants.html  _backlog.html  _capabilities.html  _connectors.html  _push.html  _simple.html  _store.html  _waitlist.html  _waitlist_preview.html  _waitlist_thread.html  base.html  dashboard.html  login.html
design/: admin.html  chat-compose-plus-sheet.html  gist-highfidelity.html  now-watch-bubble.html  onboard-capability.html  pin.html  redesign-app.html  redesign-web.html  watcher-architecture.md
design/brand/: README.txt
design/chat-compose/: plus-capabilities.html
design/chat-onboarding/: DEV-HANDOFF-persona.md  pin-chat-ui.html  pin-onboarding-v2.html  pin-onboarding.html  pin-reject-name-ux.html  pin-settings-personality.html  pin-special-personas.html
docs/: architecture.md  assistant_architecture.md  backend-scale.md  business-model.md  capability-sources.md  e2ee-mobile-agent.md  extensibility.md  pricing.md  share-to-pin-feature.md
docs/developers/: index.html
examples/lakkana-astrology/: README.md  cast_chart.py  main.py  pyproject.toml
examples/news-reporter/: README.md  main.py  pyproject.toml
integration_test/: agent_turn_test.dart  bot_echo_test.dart  e2ee_test.dart  email_auth_test.dart  embed_test.dart  flex_test.dart  gemini_test.dart  login_test.dart  persona_test.dart  postback_test.dart  recovery_test.dart  schedule_test.dart  self_room_test.dart  tasks_test.dart  watches_test.dart  weather_test.dart  wire_test.dart
ios/: Podfile
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h  SceneDelegate.swift
ios/Runner.xcodeproj/: project.pbxproj
ios/Share/: Info.plist  RSISharedModel.swift  Share.entitlements  ShareViewController.swift
ios/fastlane/: Fastfile  README.md  report.xml
k8s/: backup-cronjob.yaml  caddy_to_traefik_migration.md  deployment.yaml  ingress.yaml  install_k3s.sh  k8s_deployment_playbook.md  pvc.yaml  service.yaml
lib/: config.dart  main.dart
lib/agent/: abilities.dart  agent_config.dart  agent_reply.dart  agent_session.dart  agent_store.dart  agentic_job_service.dart  catalog_client.dart  device_brain.dart  embed_client.dart  embedder.dart  job_runner.dart  llm_adapters.dart  news_tool.dart  now_tools.dart  proxy_client.dart  remote_tools.dart  showcase.dart  skill.dart  subagent.dart  token_cost.dart  tools.dart  wake_sync.dart  watch_card.dart  watch_digest.dart  when_parse.dart
lib/models/: chat_view_message.dart
lib/screens/: abilities_screen.dart  ai_provider_screen.dart  all_tasks_screen.dart  api_log_screen.dart  auth_screen.dart  chat_preview.dart  chat_screen.dart  device_data_screen.dart  device_verify_screen.dart  local_chat_screen.dart  now_screen.dart  onboarding_screen.dart  openrouter_screen.dart  personality_screen.dart  plugins_screen.dart  settings_screen.dart  special_personas_screen.dart  usage_screen.dart  watcher_debug_screen.dart  welcome_screen.dart
lib/services/: ai_settings.dart  android_job_alarm.dart  api_log.dart  auth_service.dart  files_store.dart  matrix_service.dart  name_filter.dart  notification_service.dart  now_controllers.dart  pin_export.dart  pin_meta.dart  prefs.dart  push_service.dart  session_store.dart  shared_inbox.dart  tasks_controller.dart
lib/theme/: pin_theme.dart  theme_controller.dart
lib/widgets/: boot_loading.dart  flex_card_view.dart  google_sign_in_button.dart  html_view.dart  lang_pick.dart  liquid_glass.dart  message_bubble.dart  message_composer.dart  onboard_card.dart  pin_button.dart  pin_field.dart  pin_route.dart  pin_scaffold.dart  pin_toast.dart  pin_welcome.dart  recovery_qr.dart  theme_picker.dart
outreach/: waitlist-email.md
proxy/: pyproject.toml
proxy/deploy/: Caddyfile  deploy.sh  run.sh  setup.sh
proxy/pin_proxy/: catalog.py  display.py  main.py  mcp.py  registry.py  scheduler.py  store.py  tools.py
proxy/tests/: test_scheduler.py
rust/: Cargo.toml  test_ort.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: embed.rs  inspector.rs  matrix.rs  matrix_trace.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/cargokit/: build_pod.sh
rust_builder/ios/: rust_lib_pin.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_pin.podspec
services/markitdown-svc/: main.py  pyproject.toml
site/: deploy.sh  index.html  privacy.html
test/: html_view_test.dart  job_runner_test.dart  llm_adapters_test.dart  news_topic_test.dart  persona_prompt_test.dart  pin_meta_test.dart  prefs_test.dart  shared_inbox_test.dart  token_cost_test.dart  wake_sync_test.dart  watch_card_test.dart  when_parse_test.dart  widget_test.dart
tool/: generate_changelog.dart
(+14 files in other folders)
