[project]
name = "pin-admin"
version = "0.1.0"
description = "ปิ่น admin backoffice — catalog/skills/MCP/subagents config + developer portal (tuwunel auth)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx[http2]>=0.27",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "cryptography>=42",
    "pin-proxy",
]

[project.scripts]
pin-admin = "pin_admin.app:run"

[tool.uv.sources]
pin-proxy = { path = "../proxy", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pin_admin"]
include = ["pin_admin/templates/*.html"]
