[project]
name = "pin-proxy"
version = "0.1.0"
description = "ปิ่น LLM proxy — blind, stateless router to Gemini (free) / OpenRouter (paid)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx[http2]>=0.27",
    "python-dotenv>=1.0",
    "pyjwt[crypto]>=2.8",
]

[project.scripts]
pin-proxy = "pin_proxy.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pin_proxy"]
