[project]
name = "pin-proxy"
version = "0.1.0"
description = "ปิ่น LLM proxy — blind, stateless router to Gemini (free) / OpenRouter (paid)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx[http2]>=0.27",
    "python-dotenv>=1.0",
    "pyjwt[crypto]>=2.8",
    # Used by the admin app (form login + templates + password hashing). These
    # were in the venv but not declared, so `uv sync` pruned them and crash-looped
    # the proxy ("python-multipart" required for Form data). Declared now.
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "argon2-cffi>=23.1",
]

[project.scripts]
pin-proxy = "pin_proxy.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pin_proxy"]
