[package]
name = "rust_lib_pin"
version = "0.1.0"
edition = "2021"

# Android loads the bridge as a shared lib (cdylib → librust_lib_pin.so), iOS
# links the staticlib into the app. cargo builds both for every target; the
# cdylib only links cleanly because NOTHING static-links ORT now (ort is
# load-dynamic on every platform — see the ort target blocks below).
[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
matrix-sdk = { version = "0.18", default-features = false, features = [
    "e2e-encryption",
    "sqlite",
    "bundled-sqlite",
    "automatic-room-key-forwarding",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
once_cell = "1"
anyhow = "1"
mime = "0.3"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# On-device embeddings (see api/embed.rs). `load-dynamic`: ort links nothing at
# build and dlopens libonnxruntime at RUNTIME.
#   • Android — WORKS: ship libonnxruntime.so in jniLibs/<abi>/; ort finds it by
#     soname (the app's native lib dir is on the loader path). Build arm64 only
#     (`--target-platform android-arm64`); ort has no armv7 path here.
#   • iOS — embeddings OFF for now: ort is load-dynamic here TOO (not static).
#     Static-linking ORT would pull it into the cdylib that cargo builds for
#     every target, and that link fails → it would force a staticlib-only crate
#     (which then leaves Android with no .so). load-dynamic links nothing at
#     build, so the cdylib is clean on both platforms; at runtime iOS has no
#     libonnxruntime to dlopen, so embed_init fails → recency fallback (no crash).
[target.'cfg(not(target_os = "ios"))'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "std"] }

[target.'cfg(target_os = "ios")'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "std"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
