[package]
name = "rust_lib_pin"
version = "0.1.0"
edition = "2021"

# Android loads the bridge as a shared lib (cdylib → librust_lib_pin.so); iOS
# links the staticlib. Order matters: cargokit's build_pod.sh rewrites exactly
# `["cdylib", "staticlib"]` → `["staticlib"]` for the iOS build, so iOS builds
# staticlib-ONLY (no cdylib link, so iOS can static-link ORT without the cdylib
# failing). Android's gradle build keeps the cdylib. Don't reorder these.
[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
matrix-sdk = { version = "0.18", default-features = false, features = [
    "e2e-encryption",
    "sqlite",
    "bundled-sqlite",
    "automatic-room-key-forwarding",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
once_cell = "1"
anyhow = "1"
mime = "0.3"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# On-device embeddings (see api/embed.rs). `load-dynamic`: ort links nothing at
# build and dlopens libonnxruntime at RUNTIME.
#   • Android — WORKS: ship libonnxruntime.so in jniLibs/<abi>/; ort finds it by
#     soname (the app's native lib dir is on the loader path). Build arm64 only
#     (`--target-platform android-arm64`); ort has no armv7 path here.
#   • iOS — embeddings WORK via STATIC linking. The `onnxruntime-c` pod (see the
#     iOS podspec) statically links ORT 1.22 into the app, and iOS builds the
#     crate staticlib-only (build_pod.sh strips the cdylib), so static-linking
#     ORT here doesn't break any cdylib. ort resolves the symbols at link time —
#     no dlopen, no libonnxruntime file needed.
[target.'cfg(not(target_os = "ios"))'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "std"] }

[target.'cfg(target_os = "ios")'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
