[project]
name = "lakkana-astrology"
version = "0.1.0"
description = "Sample external developer (team: Lakkana) remote tool for ปิ่น — Thai astrology chart → flex card"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyswisseph>=2.10.3",
]
